Fixed overflow of content

--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ div.index_backround{
 }
 
 footer{
-  position: absolute;
+  position: fixed;
   overflow: hidden;
   display: block;
   bottom: 0;
